Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107450

Reg[5->6]QSlider handle size is not correct

XMLWordPrintable

    • macOS
    • 942abaae59 (qt/qtbase/dev) 942abaae59 (qt/tqtc-qtbase/dev) c4405bc5d7 (qt/qtbase/6.4) d7c7740e07 (qt/tqtc-qtbase/6.2) c4405bc5d7 (qt/tqtc-qtbase/6.4) c4405bc5d7 (qt/tqtc-qtbase/tqtc/qtinsight-6.4)

      If we have QSlider::setAttribute( Qt::WA_MacSmallSize ) set this does not makes the slider handle small if it is compared with Qt5. All following shows same size.
      Qt::WA_MacNormalSize
      Qt::WA_MacMiniSize
      Qt::WA_MacSmallSize

      Attached is the example which reproduces it

        For Gerrit Dashboard: QTBUG-107450
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            irfan.omair@digia.com Irfan Omair
            Votes:
            5 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes